# static-embedder

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  MODULE.bazel  README.md  ROADMAP.md  Tiltfile  docker-compose.yml  fly.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  mutants.yml
docs/: java-manifesto-draft.md
k8s/base/: deployment.yaml  kustomization.yaml  postgres-service.yaml  postgres-statefulset.yaml  service.yaml
k8s/overlays/local/: kustomization.yaml
migrations/: 0001_init.sql
src/: lib.rs  main.rs
src/adapters/: mod.rs  model2vec_embedder.rs  pg_vector_repository.rs
src/domain/: mod.rs
src/http/: embed.rs  error.rs  index.rs  mod.rs  search.rs
src/ports/: embedding.rs  mod.rs  repository.rs
static/: index.html
tests/: BUILD.bazel  api.rs  integration.rs  integration_db.rs  integration_embedder.rs  live_db.rs  properties.rs  properties_live.rs
tests/support/: mod.rs
