[package]
name = "static-embedder"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[[bin]]
name = "static-embedder"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "net"] }
axum = "0.8"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "migrate"] }
pgvector = { version = "0.4", features = ["sqlx"] }
model2vec-rs = "0.1.4"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
